<resources>
    <string name="app_name">Окна Сервис</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ООО \"Окна-Сервис Подольск\"</string>
    <string name="nav_header_subtitle">os@okna-servise.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_call">Позвонить</string>
    <string name="telephone">tel:+74955056514</string>

    <string name="menu_home">Главная</string>
    <string name="menu_calculator">Калькулятор</string>
    <string name="menu_company">Информация о нас</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_lead">Оформить заказ</string>

    <string name="office1_address">Адрес: 142104, Подольск, ул. Б Серпуховская д.43</string>
    <string name="office1_work_time">Режим работы: Пн. - Вс. с 9.00-18.00</string>
    <string name="office1_telephone">+7 (495) 505–65-14</string>
    <string name="card_address">Адрес</string>
    <string name="card_telephone">Телефон</string>
    <string name="card_mail">E-mail</string>
    <string name="card_work_time">Часы работы</string>
    <string name="window_p2">Оптимум</string>
    <string name="window_p1">Бюджет</string>
    <string name="window_p3">Премиум</string>
    <string name="p3_description">Rehau DELIGHT-DESIGN 70мм, 5 камер, фурнитура Roto</string>
    <string name="p2_description">Rehau THERMO 60мм, 4 камеры, фурнитура Roto</string>
    <string name="p1_description">Reachmont ECO 60мм, 3 камеры, фурнитура VORNE</string>
    <string name="button_success">Применить</string>
    <string name="send_mail_recommendation">При отправке заявки, Вы можете использовать свою почту для получения более быстрой обратной связи. Текст заказа будет скопирован в буфер обмена.</string>
    <string name="send_mail_rubbish">Очистить корзину</string>
    <string name="send_mail_user_mail">Отправлю со своей почты</string>
    <string name="send_mail_automatic">Отправить автоматически</string>
    <string name="menu_settings">О приложении</string>
    <string name="menu_auth">Личный кабинет</string>

    <string name="auth_ui_phone">Код выслан на номер %1$s</string>
    <string name="mobile_country_code">+7</string>
    <string name="auth_ui_confirm_mobile">Введите свой номер телефона</string>
    <string name="button_continue">Далее</string>
    <string name="button_accept">Подтвердить</string>
    <string name="auth_ui_hint_code_from_sms">Код из смс</string>
    <string name="auth_ui_input_code">Введите код подтверждения</string>
    <string name="auth_ui_auth_in">Войдите, чтобы сделать заказ</string>
    <string name="auth_ui_greeting">Добро пожаловать!</string>
    <string name="auth_ui_login_by_email">Войти с помощью Email</string>

</resources>