<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_lead"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/menu_lead" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_company" />
    </group>
</menu>