<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.goga133.oknaservice.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_auth"
        android:name="com.goga133.oknaservice.ui.auth.AuthFragment"
        android:label="@string/menu_auth"
        tools:layout="@layout/fragment_auth"/>
    <fragment
        android:id="@+id/nav_personal"
        android:name="com.goga133.oknaservice.ui.personal_cab.PersonalCabFragment"
        android:label="Личный кабинет"
        tools:layout="@layout/fragment_personal"/>
    <fragment
        android:id="@+id/nav_auth_input_phone"
        android:name="com.goga133.oknaservice.ui.auth.AuthMobInFragment"
        android:label="Ввод мобильного телефона"
        tools:layout="@layout/fragment_auth_input_phone"/>
    <fragment
        android:id="@+id/nav_auth_code_phone"
        android:name="com.goga133.oknaservice.ui.auth.AuthMobCodeFragment"
        android:label="Ввода кода"
        tools:layout="@layout/fragment_auth_code"/>
    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.goga133.oknaservice.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/nav_lead"
        android:name="com.goga133.oknaservice.ui.lead.LeadFragment"
        android:label="@string/menu_lead"
        tools:layout="@layout/fragment_lead" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.goga133.oknaservice.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.goga133.oknaservice.ui.info.InfoFragment"
        android:label="@string/menu_company"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.goga133.oknaservice.ui.info.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>