<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/send_mail_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/send_mail_recommendation"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/is_delete_cart_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/send_mail_rubbish"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_mail_by_user_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/send_mail_user_mail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_mail_by_auto_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/send_mail_automatic" />
</LinearLayout>