<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.AuthMobFragment">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:gravity="center"
        android:text="@string/auth_ui_confirm_mobile"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button_continue">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"
            android:hint="@string/mobile_country_code"
            android:padding="10dp"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10dp"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/button_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="18dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_continue"
        app:layout_constraintEnd_toEndOf="@+id/button_continue"
        app:layout_constraintTop_toTopOf="@+id/button_continue" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_continue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginHorizontal="40dp"
        android:text="@string/auth_ui_login_by_email"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>